templates/nested-stack.yaml
Description: "This template creates a nested stack with redshift resource in a vpc and rds resource in another vpc"
Parameters:
  RDSDBUsername:
    Description: Username for RDS database access
    Type: String
    MinLength: '1'
    MaxLength: '16'
    AllowedPattern: '[a-zA-Z][a-zA-Z0-9]*'
    ConstraintDescription: must begin with a letter and contain only alphanumeric characters.
  RDSDBPassword:
    Description: RDS Password database access
    Type: String
    AllowedPattern: '[a-zA-Z0-9]*'
    ConstraintDescription: must contain only alphanumeric characters.
  RedshiftUsername:
    Description: Redshift Username database access
    Type: String
  RedshiftPassword:
    Description: Redshift Password database access
    Type: String
  RDSDBAllocatedStorage:
    Default: '20'
    Description: The size of the RDS database (GiB)
    Type: Number
    MinValue: '20'
    MaxValue: '50'
    ConstraintDescription: must be between 20 and 50 GiB.
  EC2DefaultSecurity:
    Default: 'sg-0afdf2d5ce4c8ed3e'
    Description: The id of EC2 security group id attached to default VPC
    Type: String
    AllowedPattern: 'sg-[a-zA-Z0-9]*'
    ConstraintDescription: must begin with sg- and contain alphanumeric characters
  UserIP:
      AllowedPattern: "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})"
      ConstraintDescription: "It must be a valid IP CIDR range of the form x.x.x.x/x. Suggest to enable access to your IP address only. Pls get your address using checkip.amazonaws.com or whatsmyip.org."
      Description: "The IP address range that can be used to connect to the RDS instances from your local machine.It must be a valid IP CIDR range of the form x.x.x.x/x.Pls get your address using checkip.amazonaws.com or whatsmyip.org"
      Type: "String"
Resources:
  EC2SecurityGroup:
      Type: AWS::EC2::SecurityGroup
      Properties:
          GroupDescription: "EC2 for non-default VPC"
          VpcId:
            Fn::GetAtt:
              - NestedVPCStack
              - Outputs.VPC
          SecurityGroupIngress:
              -   IpProtocol: tcp
                  FromPort: 0
                  ToPort: 65535
              -   IpProtocol: icmp
                  FromPort: 8
                  ToPort: -1
                  CidrIp: !Ref UserIP
              -   IpProtocol: tcp
                  FromPort: 22
                  ToPort: 22
                  CidrIp: !Ref UserIP
              -   IpProtocol: tcp
                  FromPort: 80
                  ToPort: 80
                  CidrIp: "0.0.0.0/0"
              -   IpProtocol: tcp
                  FromPort: 443
                  ToPort: 443
                  CidrIp: "0.0.0.0/0"
          SecurityGroupEgress:
              -   CidrIp: "0.0.0.0/0"
                  IpProtocol: "-1"
          Tags:
              -   Key: Name
                  Value: EC2-non-default
  NestedRDSStack:
    Type: 'AWS::CloudFormation::Stack'
    DeletionPolicy: Retain
    Properties:
      TemplateURL: >-
        https://cf-templates-wnxns0c4jjl4-us-east-1.s3.amazonaws.com/rds-resource.yaml
      Parameters:
          DBUsername: !Ref RDSDBUsername
          DBPassword: !Ref RDSDBPassword
          PublicSubnet1:
                Fn::GetAtt:
                    - NestedVPCStack
                    - Outputs.PublicSubnet1
          PublicSubnet2:
                Fn::GetAtt:
                    - NestedVPCStack
                    - Outputs.PublicSubnet2
          PrivateSubnet:
                Fn::GetAtt:
                    - NestedVPCStack
                    - Outputs.PrivateSubnet1
          VPC:
                Fn::GetAtt:
                    - NestedVPCStack
                    - Outputs.VPC
          ClientIP: !Ref UserIP
  NestedRedshiftStack:
    Type: 'AWS::CloudFormation::Stack'
    DeletionPolicy: Retain
    Properties:
      TemplateURL: >-
        https://cf-templates-wnxns0c4jjl4-us-east-1.s3.amazonaws.com/redshift.yaml
      Parameters:
          Username: !Ref RedshiftUsername
          Password: !Ref RedshiftPassword
  NestedVPCStack:
    Type: 'AWS::CloudFormation::Stack'
    DeletionPolicy: Retain
    Properties:
      TemplateURL: >-
        https://cf-templates-wnxns0c4jjl4-us-east-1.s3.amazonaws.com/vpc.yaml
